Delete old nets